code/human_written_tests/WebAssembly/processed_control_flow_validation/test_br_table_19.wast
(assert_invalid
  (module (func $unbound-label
    (block (br_table 2 1 (i32.const 1)))
  ))
  "unknown label"
)